RESOLVED FIXED316312
[curl] Web Inspector: WebSocket request headers are missing
https://bugs.webkit.org/show_bug.cgi?id=316312
Summary [curl] Web Inspector: WebSocket request headers are missing
Devin Rousso
Reported 2026-06-04 09:43:00 PDT
# STEPS TO REPRODUCE 1. install `node` and `npm` 2. run `npx playwright wk https://cdpn.io/matt-west/fullpage/nYvVBV` 3. open Web Inspector 4. look at `echo.websocket.org` in the Network Tab ## EXPECTED there should be request headers for `upgrade`, `connection`, `sec-websocket-key`, `sec-websocket-version`, etc. ## ACTUAL none of those headers are present
Attachments
Devin Rousso
Comment 1 2026-06-04 10:59:20 PDT
EWS
Comment 2 2026-06-05 18:06:23 PDT
Committed 314678@main (51ffbadc9899): <https://commits.webkit.org/314678@main> Reviewed commits have been landed. Closing PR #66460 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-06-05 18:07:13 PDT
Note You need to log in before you can comment on or make changes to this bug.