[curl] Web Inspector: WebSocket request headers are missing https://bugs.webkit.org/show_bug.cgi?id=316312

Reviewed by Abrar Rahman Protyasha.

* Source/WebKit/NetworkProcess/curl/WebSocketTaskCurl.cpp:
(WebKit::WebSocketTask::WebSocketTask):
(WebKit::WebSocketTask::didOpen):
Don't notify Web Inspector that the handshake has been sent until it's actually been sent.
Also make sure that the handshake copies from the initial network request all the info needed by Web Inspector (e.g. method, request headers, etc.).

* Source/WebCore/Modules/websockets/WebSocketHandshake.cpp:
(WebCore::WebSocketHandshake::clientHandshakeRequest const):
Add missing header to match `WebSocketHandshake::clientHandshakeMessage`.

* LayoutTests/http/tests/websocket/tests/hybi/inspector/before-load.html:
* LayoutTests/http/tests/websocket/tests/hybi/inspector/before-load-expected.txt:

Canonical link: https://commits.webkit.org/314678@main